--- a/src/App.css
+++ b/src/App.css
@@ -308,8 +308,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-image: url('./assets/img/GRID.png');
   background-position: top center;
   background-size: cover;
-  background-repeat: no-repeat;
-  border-radius:64px;
+
   text-align: center;
   padding: 60px 50px;
   margin-top: -60px;
@@ -362,11 +361,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .project {
-  padding: 80px 0;
-  position: relative;
-  background-color: black;
+  margin-top: 0;
+  padding: 0px 0 100px 0;
+  background-image: url('./assets/img/GRID.png');
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .project h2 {
+    color: #000000;
 	font-size: 45px;
 	font-weight: 700;
   text-align: center;
@@ -384,7 +387,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   width: 72%;
   margin: 0 auto;
   border-radius: 50px;
-  background-color: rgb(255 255 255 / 10%);
+  background-color: rgb(0, 0, 0);
   overflow: hidden;
 }
 .project .nav.nav-pills .nav-item {
@@ -489,7 +492,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Projects Css ************/
 .contact {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 60px 0 200px 0;
+  padding: 60px 0 50px 0;
 }
 .contact img {
   width: 92%;
